--- a/src/styles.css
+++ b/src/styles.css
@@ -6,3 +6,42 @@
   border: 2px solid #000;
   font-size: 2em;
 }
+
+.card{
+  display: block;
+  overflow: hidden;
+  margin: 12px;
+  border-radius: 2px;
+  width: calc(100% - 24px);
+  font-size: 1.4rem;
+  background: #fff;
+  -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.3);
+  box-shadow: 0 1px 2px rgba(0,0,0,.3);
+}
+
+.card__content{
+  padding: 13px 16px 14px;
+  font-size: 1.4rem;
+  line-height: 1.4;
+}
+
+.card__img{
+  display: block;
+  width: 100%;
+}
+
+.card__title {
+  display: block;
+  font-size: 21px;
+  line-height: 1.2;
+  color: #222;
+  margin: 2px 0;
+  padding: 8px 0;
+}
+
+.card__description{
+  margin: 0 0 2px;
+  font-size: 16px;
+  color: #666;
+}
+
