--- a/src/styles.css
+++ b/src/styles.css
@@ -10,13 +10,15 @@
 .card{
   display: block;
   overflow: hidden;
-  margin: 12px;
   border-radius: 2px;
   width: calc(100% - 24px);
   font-size: 1.4rem;
   background: #fff;
   -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.3);
   box-shadow: 0 1px 2px rgba(0,0,0,.3);
+  margin: auto;
+  margin-top: 10px;
+  padding: 5px;
 }
 
 
@@ -26,17 +28,16 @@
 }
 
 .card__title {
-  padding: 13px 16px 14px;
-  display: block;
+  padding-left: 10px;
+  padding-right: 10px;
   font-size: 21px;
   line-height: 1.2;
   color: #222;
-  margin: 2px 0;
 }
 
 .card__description{
-  padding: 13px 16px 14px;
-  margin: 0 0 2px;
+  padding-left: 10px;
+  padding-right: 10px;
   font-size: 16px;
   color: #666;
 }
