--- a/src/styles.css
+++ b/src/styles.css
@@ -37,17 +37,17 @@
 
 }
 
-.card__top__owner{
+.card__top__info{
   font-size: 14px;
   padding: 5px;
 }
 
-.card__top__owner_name{
+.card__top__info_headline{
   color: rgb(46, 45, 45);
   font-weight: bold;
 }
 
-.card__top__owner_time{
+.card__top__info_subline{
   color:gray;
 }
 
@@ -72,5 +72,32 @@
   padding-right: 5px;
   font-size: 16px;
   color: rgb(46, 45, 45);
+}
+
+.card__response{
+  margin-top: 5px;
+  padding-left: 5px;
+  display: flex;
+  flex-direction: row;
+  height: 30px;
+  border-width: thin;
+  border-top: 0.5px solid #CCCCCC;
+}
+
+.card__response__like{
+  text-align: center;
+  font-size: 14px;
+  padding: 7px;
+  flex-grow: 1;
+  cursor: pointer;
+
+}
+
+.card__response__share{
+  text-align: center;
+  font-size: 14px;
+  padding: 7px;
+  flex-grow: 1;
+  cursor: pointer;
 }
 
