Updated title, id

--- a/src/styles.css
+++ b/src/styles.css
@@ -59,6 +59,7 @@
 }
 
 .card__title {
+  margin-top: 5px;
   padding-left: 10px;
   padding-right: 10px;
   font-size: 21px;
@@ -68,8 +69,8 @@
 
 .card__description{
   margin-top: 5px;
-  padding-left: 5px;
-  padding-right: 5px;
+  padding-left: 10px;
+  padding-right: 10px;
   font-size: 16px;
   color: rgb(46, 45, 45);
 }
