--- a/src/components/texts/text/style.css
+++ b/src/components/texts/text/style.css
@@ -1,4 +1,4 @@
-.textBold {
+.textLight {
     margin-top: 5px;
     margin-bottom: 5px;
     padding-left: 10px;
@@ -6,5 +6,4 @@
     font-size: 17px;
     line-height: 1.2;
     color: black;
-    font-weight: bold;
 }
