--- a/example/src/index.css
+++ b/example/src/index.css
@@ -1,5 +1,21 @@
 body {
-  margin: 0;
-  padding: 0;
+  margin     : 0;
+  padding    : 0;
   font-family: sans-serif;
+}
+
+.app-container {
+  display        : flex;
+  justify-content: center;
+  align-items    : center;
+  height         : 100vh;
+}
+
+.list-container {
+  max-height: 80%;
+  overflow  : scroll;
+}
+
+.strong-text {
+  font-weight: bold;
 }
